fix overlapping of slides in Slider & adding media-query for small screens

--- a/components/Watchlist/Watchlist.module.css
+++ b/components/Watchlist/Watchlist.module.css
@@ -3,11 +3,14 @@
   flex-direction: column;
   align-content: center; */
   /* height: 100%; */
-
+  text-align: center; 
+  width: 100%;
+  margin: 0 auto;
+  margin-bottom: 20px;
 }
 
 /*https://stackoverflow.com/questions/49028877/slick-carousel-force-slides-to-have-the-same-height*/
-.slick-track
+/* .slick-track
 {
     display: flex !important;
 }
@@ -20,6 +23,10 @@
 .slick-slide > * {
   display: grid;
   place-items: center; 
+} */
+
+.slick-slide {
+  margin: 0 20px;
 }
 
 .watchlistContainer {
@@ -45,6 +52,9 @@
 }
 
 .watchlistMovieBox{
+  /* display: flex; 
+  justify-content: center;  */
+
   margin: 10px;
   text-align: center;
   border: 1px solid rgb(0, 0, 0);
@@ -88,6 +98,7 @@
   margin-right: auto; */
   /* width: 50%; */
   width: auto;
+  margin: auto;
 }
 
 .noMoviesOnWatchlist{
@@ -103,6 +114,13 @@
   border: 1px solid rgb(0, 0, 0);
   border-radius: 10px;
   padding: 1em;
+}
+
+@media (max-width: 480px) {
+  .watchlistPoster {
+    width: 150px; 
+    height: 225px; 
+  }
 }
 
 /*box shadow generator*/
